# PROJECTS

./: README.md  crypto.py
Birthday Paradox Probability Calculator/: README.md  shared_birthday.py
Bruteforce_Password_Cracker/: README.md  brute.py
Cheating Hangman/: README.md  hangman.py
Password Strength/: README.md  password_information_content.c
Password_Generator/: CMakeLists.txt  README.md  alphabet.c  alphabet.h  information_content.c  information_content.h  main.c  pw_generator.c  pw_generator.h
TCP Chat Client:Server/: Chatserver.py  README.md  client.py
